<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_everything">Delete Everything</string>
    <string name="delete_habit">Delete habit</string>
    <string name="intro_placeholder">This is some placeholder text for the intro screen</string>
    <string name="tea_cup_icon">Tea Cup Icon</string>
    <string name="description_hint">Description</string>
    <string name="title_hint">Title</string>
    <string name="update">Update</string>
    <string name="time_not_selected">Time not selected</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="fast_food_icon">Fast Food Icon</string>
    <string name="smoking_icon">Smoking Icon</string>
    <string name="confirm">Confirm</string>
</resources>