<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.UpdateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/update_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_update_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/update_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_update_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_pick_date_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pick_a_date"
            app:elevation="10dp"
            android:backgroundTint="@color/indigo_500"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/update_description"
            app:layout_constraintStart_toStartOf="@+id/update_description"
            app:layout_constraintTop_toBottomOf="@+id/update_description" />

        <TextView
            android:id="@+id/update_show_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Date not selected"
            app:layout_constraintEnd_toEndOf="@+id/update_pick_date_btn"
            app:layout_constraintStart_toStartOf="@+id/update_pick_date_btn"
            app:layout_constraintTop_toBottomOf="@+id/update_pick_date_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_pick_time_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/indigo_500"
            android:text="@string/pick_a_time"
            app:elevation="10dp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/update_show_date"
            app:layout_constraintStart_toStartOf="@+id/update_show_date"
            app:layout_constraintTop_toBottomOf="@+id/update_show_date" />

        <TextView
            android:id="@+id/update_show_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/time_not_selected"
            app:layout_constraintEnd_toEndOf="@+id/update_pick_time_btn"
            app:layout_constraintStart_toStartOf="@+id/update_pick_time_btn"
            app:layout_constraintTop_toBottomOf="@+id/update_pick_time_btn" />

        <LinearLayout
            android:id="@+id/image_holder_update"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/update_show_time"
            app:layout_constraintStart_toStartOf="@+id/update_show_time"
            app:layout_constraintTop_toBottomOf="@+id/update_show_time">

            <ImageView
                android:id="@+id/update_fastfood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/fast_food_icon"
                android:src="@drawable/fastfood_selected" />

            <ImageView
                android:id="@+id/update_tea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/tea_selected"
                android:contentDescription="@string/tea_cup_icon"/>

            <ImageView
                android:id="@+id/update_cigar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/smoking_selected"
                android:contentDescription="@string/smoking_icon"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/blue_A200"
            app:elevation="10dp"
            android:text="@string/update"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/image_holder_update"
            app:layout_constraintStart_toStartOf="@+id/image_holder_update"
            app:layout_constraintTop_toBottomOf="@+id/image_holder_update" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>